@@ -1,3 +1,10 @@
+2015-08-11  Peter Zotov  <whitequark@whitequark.org>
+
+	PR ld/18759
+	* config/tc-or1k.c (tc_gen_reloc): Correct computation of PC
+	relative relocs.
+	* config/tc-or1k.h (GAS_CGEN_PRCEL_R_TYPE): Delete.
+
 2015-09-25  Ryo ONODERA  <ryo_on@yk.rim.or.jp>
 
 	PR 18994
